# IA-BioSoftware-Atelier

./: README.md
developpement-logiciel/: burger.py  pyproject.toml  ruff_errors.txt  run_tests.sh  test_burger.py
developpement-logiciel/tmp/: burger.txt
