[project]
name = "myproject"
version = "0.1.0"
description = "My awesome project"
requires-python = ">=3.11"

dependencies = [
    "ruff",
    "bandit",
    "safety",
    "pyyaml>=5.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov",
]

[tool.ruff.lint]
select = ["S", "R", "RET", "Q", "F", "I", "N", "E", "W", "D", "COM", "LOG", "G", "T20", "PYI", "PT"]
ignore = ["E501", "N818", "D100", "D104", "PT009", "PT027", "D212", "D203", "S105", "COM812", "D417"]
